Refactor to use Worker API and versioning 1st